<!--
  ~ Copyright 2013-2014 @BijdorpStudio
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/logoImage"
            android:src="@drawable/ic_launcher"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/large_text"
                android:text="@string/app_name"
                android:id="@+id/textView"
                android:paddingLeft="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text"
                android:text="v1.0.0.3"
                android:id="@+id/version"
                android:paddingLeft="@dimen/activity_horizontal_margin"/>

            <TextView
                android:id="@+id/twitter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text"
                android:text="@string/twitter_name"
                android:paddingLeft="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/used_libraries_text"
        android:text="@string/app_explanation"/>

    <TextView
        style="@style/used_libraries_text"
        android:text="@string/app_source_code"/>
</LinearLayout>
